--- a/RC_Circuits/RC_Circuits.tex
+++ b/RC_Circuits/RC_Circuits.tex
@@ -81,7 +81,7 @@
 
 \begin{itemize}
 
-  \item We use the the letter ``C" as a label for a capacitor and the units of charge. When used as a label, $C$ is usually written in itallics. Thus
+  \item We use the the letter ``C" as a label for a capacitor and the units of charge. When used as a label, $C$ is usually written in italics. Thus
 
         ``$Q_C= 10 \text{ C}$" means ``the capacitor labeled $C$ has a charge of $10$ Coulombs."
 
@@ -97,7 +97,7 @@ If one capacitor with capacitance $C$ is in a circuit with other resistors (and 
 
 $q(t)=Q_oe^{-t/\tau}$,
 
-where $\tau\equiv RC$, $Q_o$ is the charge on the capacitor at $t=0$, and $R$ is the equivalent resistance. The quantity $\tau$ is called ``RC time constant." The equation for $q(t)$ follows from using Kirchhoff's voltage law, which gives a differential equation, and then solving the differential equation.
+where $\tau\equiv RC$, $Q_o$ is the charge on the capacitor at $t=0$, and $R$ is the equivalent resistance. The quantity $\tau$ is called ``$RC$ time constant." The equation for $q(t)$ follows from solving the differential equation that follows from using Kirchhoff's voltage law.
 
 \subsection{Problem}
 
@@ -147,7 +147,11 @@ For the following circuit, find the charge $q$ on the capacitor at $t=2\text{ s}
 \vskip 56.25pt
 \fi
 
-Next, sketch a plot of $q(t)$ from $t=0$ to $t=6\text{ s}$ for each of these three cases. Used a solid, dashed, and dotted line for case 1., 2., and 3., respectively.
+\begin{enumerate}
+
+  \item[4.] Next, sketch a plot of $q(t)$ from $t=0$ to $t=6\text{ s}$ for each of these three cases. Used a solid, dashed, and dotted line for case 1., 2., and 3., respectively.
+
+\end{enumerate}
 
 \input{figures/Discharging_b.tikz}
 
@@ -164,9 +168,9 @@ $q(2)=Q_oe^{-2/RC}$, assuming $RC$ has units of seconds. So
 
       \item $q(2)=Q_oe^{-2/4}=Q_o/\sqrt{e} \simeq 0.61 Q_o$
 
-    \end{enumerate}
+      \item All curves decay exponentially. To plot, start at $Q_o$, and draw an exponentially decaying curve that passes through one of the values above at $t=2\text{ s}$.
 
-All curves decay exponentially. To plot, start at $Q_o$, and draw an exponentially decaying curve that passes through one of the values above at $t=2$.
+    \end{enumerate}
 \fi
 
 \subsection{Problem}
@@ -213,7 +217,7 @@ If a single capacitor is in series with other resistors and a DC voltage source,
 q(t)=Q_f(1-e^{-t/\tau})
 \end{equation}
 
-where $\tau\equiv RC$, $R$ is the equivalent resistance, and $Q_f$ is the final charge on the capacitor, that is, the charge on the capacitor as $t\rightarrow\infty$ (it is technically more accurate to say $t\gg \tau$ instead of $t\rightarrow\infty$).
+where $\tau\equiv RC$, $R$ is the equivalent resistance, and $Q_f$ is the final charge on the capacitor, that is, the charge on the capacitor as $t\rightarrow\infty$ (it is technically more accurate to say $t\gg \tau$ instead of $t\rightarrow\infty$; why?).
 
 To find $Q_f$, replace the capacitor with an open circuit and use Kirchhoff's voltage law to find the voltage across the capacitor, $V_f$. Then use $Q_f=CV_f$.
 
@@ -227,17 +231,13 @@ Find $q(t)$ for the following circuit, assuming the switch is closed at $t=0$ an
 
 \input{figures/Charging_b.tikz}
 
-Kirchhoff's voltage Law gives
-
-$\mathcal{E}-i(t)R-v_C(t)=0$
-
-For large $t$, $i(t)=0$, leaving $v_{C}(t)=\mathcal{E}$. This voltage is for large $t$, so we relabel it as $V_f$. Using $Q_f=CV_f$ gives $Q_f=C\mathcal{E}$, so
+Kirchhoff's voltage Law gives $\mathcal{E}-i(t)R-v_C(t)=0$, where $v_C(t)$ is the voltage across the capacitor. For large $t$, $i(t)=0$, leaving $v_{C}(t)=\mathcal{E}$. This voltage is for large $t$, so we relabel it as $V_f$. Using $Q_f=CV_f$ gives $Q_f=C\mathcal{E}$, so
 
 \begin{equation}
 q(t)=C\mathcal{E}(1-e^{-t/RC})
 \end{equation}
 
-Note that the general formula $q(t)=Q_f(1-e^{-t/\tau})$ that applies for all $t$ is derived by solving the differential equation $\mathcal{E}-i(t)R-v_C(t)=0$ using $i(t)=dq(t)/dt$ and $v_C(t)=Cq(t)$.
+Note that the general formula $q(t)=Q_f(1-e^{-t/\tau})$ that applies for all $t$ is derived by solving the differential equation $\mathcal{E}-i(t)R-v_C(t)=0$ using $i(t)=dq(t)/dt$ and $v_C(t)=q(t)/C$.
 
 \ifsolutions
 
@@ -274,10 +274,10 @@ For a circuit with any number of capacitors, DC voltage sources, and resistors, 
 
     \end{enumerate}
 \else
-\vskip 144pt
+
 \fi
 \ifsolutions\else
-\vskip 144pt
+
 \fi
 
 \newpage
@@ -288,7 +288,7 @@ For a circuit with any number of capacitors, DC voltage sources, and resistors, 
 
 \input{figures/Charge_Discharge_a.tikz}
 
-The switch in the above circuit has been in position $a$ for a long time. At $t = 0$, the switch is moved to position $b$. The values of the circuit elements are $\mathcal{E}= 12\text{ V}$, $C = 10\text{ mF}$, and $R = 20\text{ }\Omega$.
+The switch in the above circuit has been in position $a$ for a long time. At $t = 0$, the switch is moved instantaneously to position $b$. The values of the circuit elements are $\mathcal{E}= 12\text{ V}$, $C = 10\text{ mF}$, and $R = 20\text{ }\Omega$.
 
 Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $b$. Let $t=0^+$ correspond to the time just after the switch is moved from $a$ to $b$.
 
@@ -297,18 +297,7 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $
   \item What is the current through the resistor at $t=0^-$?
 
         \ifsolutions
-        \textbf{Answer}: Zero.
-        \else
-        \vskip 56.25pt
-        \fi
-        \ifsolutions\else
-        \vskip 56.25pt
-        \fi
-
-  \item What is the current through the resistor at $t=0^+$?
-
-        \ifsolutions
-        \textbf{Answer}: Immediately after the switch is moved to $b$, the capacitor starts to discharge though the resistor. Kirchhoff's Voltage law states that the voltage across the resistor equals the voltage across the capacitor, $v_C$. By Ohm's law current through the resistor is $i(0^+) = v_C(0^+)/R = 12\text{ V}/20\text{ }\Omega = 0.6\text{ A}$.
+        \textbf{Answer}: Zero. The battery charges the capacitor until the charge on the capacitor is such that it is equivalent to a battery with an emf of $\mathcal{E}$ oriented such that no current flows through it.
         \else
         \vskip 56.25pt
         \fi
@@ -319,7 +308,7 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $
   \item What is the charge on the capacitor at $t=0^-$?
 
         \ifsolutions
-        \textbf{Answer}: $q(0^-) = Cv_C(0^-) = (10 \text{ mF})(12\text{ V}) = 120\text{ mC}$.
+        \textbf{Answer}: After a long time in position $a$, the current is zero. Replacing the capacitor with an open circuit and using KVL gives $v_C=\mathcal{E}$. So $q(0^-) = Cv_C(0^-) = (10 \text{ mF})(12\text{ V}) = 120\text{ mC}$.
         \else
         \vskip 56.25pt
         \fi
@@ -338,6 +327,28 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $
         \vskip 56.25pt
         \fi
 
+  \item What is the voltage across the capacitor at $t=0^+$?
+
+        \ifsolutions
+        \textbf{Answer}: Using $V=Q/C$ gives $v_C(0^+)=120\text{ mC}/(10\text{ mF}) = 12\text{ V} = \mathcal{E}$
+        \else
+        \vskip 56.25pt
+        \fi
+        \ifsolutions\else
+        \vskip 56.25pt
+        \fi
+
+  \item What is the current through the resistor at $t=0^+$?
+
+        \ifsolutions
+        \textbf{Answer}: Immediately after the switch is moved to $b$, the capacitor starts to discharge though the resistor. Kirchhoff's Voltage law for the new closed loop states that the voltage across the resistor equals the voltage across the capacitor, $v_C$. By Ohm's law current through the resistor is $i(0^+) = v_C(0^+)/R = 12\text{ V}/20\text{ }\Omega = 0.6\text{ A}$.
+        \else
+        \vskip 56.25pt
+        \fi
+        \ifsolutions\else
+        \vskip 56.25pt
+        \fi
+
   \item What is the charge on the capacitor at $t = 200\text{ ms}$?
 
         \ifsolutions
@@ -345,10 +356,10 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $
 
         $q(200\text{ ms}) = Q_0e^{-200\text{ ms}/RC} = 120\text{ mC} \cdot e^{-200\text{ ms}/200\text{ ms}} \simeq120\text{ mC}\cdot 0.37 \simeq 44 \text{ mC}$.
         \else
-        \vskip 56.25pt
+
         \fi
         \ifsolutions\else
-        \vskip 56.25pt
+
         \fi
 
 \end{enumerate}
@@ -359,7 +370,7 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $a$ to $
 
 \input{figures/Charge_Discharge_b.tikz}
 
-The switch in the above circuit has been in position $b$ for a long time. At $t = 0$, the switch is moved to position $a$. The values of the circuit elements are $\mathcal{E}= 12\text{ V}$, $C = 10\text{ mF}$, and $R = 20\text{ }\Omega$.
+The switch in the above circuit has been in position $b$ for a long time. At $t = 0$, the switch is moved instantaneously to position $a$. The values of the circuit elements are $\mathcal{E}= 12\text{ V}$, $C = 10\text{ mF}$, and $R = 20\text{ }\Omega$.
 
 Let $t=0^-$ correspond to the time just before the switch is moved from $b$ to $a$. Let $t=0^+$ correspond to the time just after the switch is moved from $b$ to $a$.
 
@@ -387,57 +398,61 @@ Let $t=0^-$ correspond to the time just before the switch is moved from $b$ to $
         \vskip 56.25pt
         \fi
 
-  \item What is the charge on the capacitor at $t=0^-$?
+\end{enumerate}
 
-        \ifsolutions
-        {\bf Answer: } Zero.
-        \else
-        \vskip 56.25pt
-        \fi
-        \ifsolutions\else
-        \vskip 56.25pt
-        \fi
+\begin{enumerate}
 
-  \item What is the charge on the capacitor at  $t=0^+$?
+  \item[3.] What is the charge on the capacitor at (a) $t=0^-$ and (b) $t=0^+$?
 
-        \ifsolutions
-        {\bf Answer: } Zero.
-        \else
-        \vskip 56.25pt
-        \fi
-        \ifsolutions\else
-        \vskip 56.25pt
-        \fi
+            \ifsolutions
+            {\bf Answer: } (a) Zero; (b) Zero
+            \else
+            \vskip 56.25pt
+            \fi
+            \ifsolutions\else
+            \vskip 56.25pt
+            \fi
 
-  \item What is the current through the resistor at $t=0^+$?
+  \item[4.] What is the voltage across the capacitor at $t=0^+$?
 
-        \ifsolutions
-        {\bf Answer:} Kirchhoff's voltage law at this time is
+            \ifsolutions
+            {\bf Answer: } Zero.
+            \else
+            \vskip 56.25pt
+            \fi
+            \ifsolutions\else
+            \vskip 56.25pt
+            \fi
 
-        $\mathcal{E}-i(0^+)R-v_C(0^+)=0$
+  \item[5.] What is the current through the resistor at $t=0^+$?
 
-        At $t=0^+$ the voltage across the capacitor is zNeero because it is uncharged, so $i(0^+)R=\mathcal{E}$. Thus, $i(0^+) = \mathcal{E}/R = 12\text{ V}/20\text{ }\Omega = 0.6\text{ A}$.
-        \else
-        \vskip 56.25pt
-        \fi
-        \ifsolutions\else
-        \vskip 56.25pt
-        \fi
+            \ifsolutions
+            {\bf Answer:} Kirchhoff's voltage law at this time is
 
-  \item What is the charge on the capacitor at time $t = 200\text{ ms}$?
+            $\mathcal{E}-i(0^+)R-v_C(0^+)=0$
 
-        \ifsolutions
-        {\bf Answer: } The time constant is $RC=200\text{ ms}$. At $t=200\text{ ms}$, the charge accumulated on the capacitor is:
+            At $t=0^+$ the voltage across the capacitor is zero because it is uncharged, so $i(0^+)R=\mathcal{E}$. Thus, $i(0^+) = \mathcal{E}/R = 12\text{ V}/20\text{ }\Omega = 0.6\text{ A}$.
+            \else
+            \vskip 56.25pt
+            \fi
+            \ifsolutions\else
+            \vskip 56.25pt
+            \fi
 
-        \begin{equation}
-        q(200\text{ s}) = C\mathcal{E}(1-e^{-(200\text{ s})/RC}) = (10\text{ mF} \cdot 12\text{ V})(1-e^{-200/200})\simeq (120\text{ mV})(0.63)\simeq 75.9\text{ mV}
-        \end{equation}
-        \else
+  \item[6.] What is the charge on the capacitor at time $t = 200\text{ ms}$?
 
-        \fi
-        \ifsolutions\else
+            \ifsolutions
+            {\bf Answer: } The time constant is $RC=200\text{ ms}$. At $t=200\text{ ms}$, the charge accumulated on the capacitor is:
 
-        \fi
+            \begin{equation}
+            q(200\text{ s}) = C\mathcal{E}(1-e^{-(200\text{ s})/RC}) = (10\text{ mF} \cdot 12\text{ V})(1-e^{-200/200})\simeq (120\text{ mV})(0.63)\simeq 75.9\text{ mV}
+            \end{equation}
+            \else
+
+            \fi
+            \ifsolutions\else
+
+            \fi
 
 \end{enumerate}
 
