Updates from Overleaf

--- a/Lorentz_Force_Wires/Lorentz_Force_Wires.tex
+++ b/Lorentz_Force_Wires/Lorentz_Force_Wires.tex
@@ -1,6 +1,6 @@
 \newif\ifsolutions
-\solutionstrue % Show solutions
-%\solutionsfalse % Hide solutions
+%\solutionstrue % Show solutions
+\solutionsfalse % Hide solutions
 
 \documentclass{article}
 \usepackage{geometry}
