--- a/Electric_Field/Electric_Field.tex
+++ b/Electric_Field/Electric_Field.tex
@@ -71,301 +71,92 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{Electric Field and r^}
+\lhead{Electric Field}
 \rhead{\thepage}
 \fancyfoot{}
 
 \begin{document}
 
-\section{Overview}
+% Figures:
+% https://www.mathcha.io/editor/M55KMuQLiLmH9Vgp0Ptw6QGB3HnpzJnnuM6VoB7
 
-This activity covers topics in Section 21.4 of Young and Freedman 2015, 14th Edition.
+\section{Overview}
 
 The electric field vector, $\bfvec{E}$, is a quantity assigned to a point in space. Given this quantity, we can compute the force on a charge $Q$ will experience if it is placed at that point using the equation $\bfvec{F}=Q\bfvec{E}$. The direction of $\bfvec{E}$ is also the direction a charge will begin to move if released from rest.
 
 To find $\bfvec{E}$ at any point in space, 
-compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q_o$ at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q_o$.
+compute the force $\bfvec{F}$ due to all other charges on a hypothetical (or ``test") charge $q$o$ at a point where you want to know $\bfvec{E}$. To find $\bfvec{E}$ at that point, divide $\bfvec{F}$ by $q$o$.
 
-\begin{equation}
-\bfvec{E} = \frac{\bfvec{F}}{q_o}
-\end{equation}
+$$\bfvec{E} = \frac{\bfvec{F}}{q$o}$$
 
 %To find $\bfvec{F}$ when a different charge $Q$ is placed where $q$ was, multiply $\bfvec{E}$ by $Q$.
 
 \section{Example I}
 
-Charge $q_1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Also, find $E$. (Note that $E$ and $|\bfvec{E}|$ are used interchangebly.)
+Charge $q$1$ is at $(x,y)=(-a,-a)$. Find the electric field at $(x,y)=(a,a)$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Also, find $E$. (Note that $E$ and $|\bfvec{E}|$ are used interchangebly.)
 
 \textbf{Solution}
 
-To find the electric field at a point in space, we put a hypothetical ``test" charge $q_o$ at that point, compute the force on it due to all other charges, and then use
+To find the electric field at a point in space, we put a hypothetical ``test" charge $q$o$ at that point, compute the force on it due to all other charges, and then use
 
-\begin{equation}
-\bfvec{E} = \frac{\bfvec{F}}{q_o}
-\end{equation}
+$$\bfvec{E} = \frac{\bfvec{F}}{q$o}$$
 
-The force a positive charge $q_1$ at $(x,y)=(-a,-a)$ exerts on a positive charge $q_2$ at $(x,y)=(a, a)$ was computed in a previous activity.
+The force a positive charge $q$1$ at $(x,y)=(-a,-a)$ exerts on a positive charge $q$2$ at $(x,y)=(a, a)$ was computed in a previous activity.
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_2}=k\frac{|q_1q_2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$2}=k\frac{|q$1q$2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
-We also found that this equation applies when $q_1$ and $q_2$ are both positive or both are negative. If $q_1$ was positive and $q_2$ was negative, or vice-versa, we found the sign changed:
+We also found that this equation applies when $q$1$ and $q$2$ are both positive or both are negative. If $q$1$ was positive and $q$2$ was negative, or vice-versa, we found the sign changed:
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_2}=-k\frac{|q_1q_2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$2}=-k\frac{|q$1q$2|}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
 Based on this, we can write a single equation for all possibilities:
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_2}=k\frac{q_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$2}=k\frac{q$1q$2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
-If we replace $q_2$ with $q_o$, this is
+If we replace $q$2$ with $q$o$, this is
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_o}=k\frac{q_1q_o}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$o}=k\frac{q$1q$o}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat)$$
 
-The electric field at the location of $q_o$ is then 
+The electric field at the location of $q$o$ is then 
 
-$\ds\bfvec{E}_{\text{at }(a,a) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o} = \frac{kq_1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$,
+$\ds\bfvec{E}${\text{at }(a,a) \text{ due to }q$1} = \frac{\bfvec{F}}{q$o} = \frac{kq$1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$,
 
-where the fact that $\sin 45^\circ=\cos 45^\circ=1/\sqrt{2}$ was used. The magnitude is $E=\sqrt{E_x^2+E_y^2}=k|q_1|/8a^2$.
+where the fact that $\sin 45^\circ=\cos 45^\circ=1/\sqrt{2}$ was used. The magnitude is $E=\sqrt{E$x^2+E$y^2}=k|q$1|/8a^2$.
 
-Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. Suppose $q_1$ is positive. Our equation predicts that a positive charge released from rest at $(a, a)$ will move up and to the right. Suppose $q_1$ is negative. Our equation predicts that a positive charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract.
+Sign check: When computing electric fields and forces, it is easy to make a sign error. The electric field vector points in the direction a positive charge will move if released there from rest. Suppose $q$1$ is positive. Our equation predicts that a positive charge released from rest at $(a, a)$ will move up and to the right. Suppose $q$1$ is negative. Our equation predicts that a positive charge will move down and to the left. This is consistent with the fact that like charges repel and unlike charges attract.
 
 \section{Problem I}
 
-Charge $q_1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E_x\ihat + E_y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
+Charge $q$1$ is at $(x,y)=(-a,a)$. At $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
 
 \input{../Electric_Force/figures/grid.tikz}
 
 \ifsolutions
 {\bf Answer}:
 
-From Problem II on the Electric Force Activity, if $q_2$ is at $(x,y)=(a, 0)$ (and using the arguments in the previous example to drop the absolute value sign),
+From Problem II on the Electric Force Activity, if $q$2$ is at $(x,y)=(a, 0)$ (and using the arguments in the previous example to drop the absolute value sign),
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_2}=k\frac{q_1q_2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$2}=k\frac{q$1q$2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$$
 
-Replacing $q_2$ with a test charge $q_o$,
+Replacing $q$2$ with a test charge $q$o$,
 
-\begin{equation}
-\bfvec{F}_{q_1\text{ on } q_o}=k\frac{q_1q_o}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)
-\end{equation}
+$$\bfvec{F}${q$1\text{ on } q$o}=k\frac{q$1q$o}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$$
 
-$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1} = \frac{\bfvec{F}}{q_o}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$
+$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1} = \frac{\bfvec{F}}{q$o}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$
 \fi
 
 \newpage
-
-\section{The $\rhat$ Unit Vector}
-
-Previously, when computing the electric force between two charges, you used the formula $F=k{|q_1q_2|}/{r^2}$ to find the magnitude of the force and then used a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$. A similar process was used for computing $\bfvec{E}$ above (because we calculated $\bfvec{F}$ as part of the process). The textbook provides an equation for the electric field that requires a slightly different calculation method.
-
-The equation for the electric field using a unit vector is
-
-\begin{equation}
-\bfvec{E}_{\text{due to }q_1}=kq_1\frac{\rhat}{r^2}\thinspace,
-\end{equation}
-
-where $\rhat$ is the unit vector that points from the position of $q_1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q_1$ and that point.
-
-To find $\rhat$, 
-
-\begin{enumerate}
-
-  \item draw a vector, $\bfvec{r}$ from $q_1$ to the point in space where you want to know $\bfvec{E}$;
-
-  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
-
-  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
-
-\end{enumerate}
-
-\section{Example II}
-
-If $q_1$ is at $(x,y)=(-a,-a)$, find the electric field at $(x,y)=(a,a)$ using $\bfvec{E}_{\text{due to }q_1}=kq_1{\rhat}/{r^2}$. Also, find $E$.
-
-\textbf{Solution}
-
-The calculation of $\rhat$ is shown in the following diagram.
-
-\input{figures/Two_Charges.tikz}
-
-Substitution gives
-
-\begin{equation}
-\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}=kq_1\frac{1}{r^2}\rhat = kq_1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]\thinspace,
-\end{equation}
-
-which is the same result obtained in the previous example, as expected.
-
-To calculate $\bfvec{E}$, we can use
-
-\begin{equation}
-|\bfvec{E}|=E=\sqrt{E_x^2+E_y^2}
-\end{equation}
-
-and plug in $E_x=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and $E_y=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $E=k|q_1|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
-
-$\ds\bfvec{E}=kq_1\frac{\rhat}{r^2}\quad$
-gives
-$\quad\ds|\bfvec{E}|=k|q_1|\frac{|\rhat|}{r^2}$.
-
-The magnitude of a unit vector is $1$, so
-
-$\ds|\bfvec{E}|=k|q_1|\frac{1}{r^2}=\frac{k|q_1|}{8a^2},\thickspace$ as before.
 
 \section{Problem II}
 
-Charge $q_1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$ using $\bfvec{E}_{\text{at }(a,0)\text{ due to }q_1}=kq_1{\rhat}/{r^2}$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
+Charge $q$1$ is at $(x,y)=(-a,a)$. Find the electric field at $(x,y)=(a, 0)$, find $\bfvec{E}$ in the form $\bfvec{E}=E$x\ihat + E$y\jhat$. Check signs of the components of $\bfvec{E}$ using the technique used in Example I. Also, find $E$.
 
 \input{../Electric_Force/figures/grid.tikz}
 
 \ifsolutions
 {\bf Answer}:
 
-$\bfvec{r}=2a\ihat-a\jhat$,
-$\quad$
-$\ds\rhat=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$,
-$\quad$ $r^2=5a^2$
-
-$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$, which matches the solution to Problem I, as expected.
+$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$, which matches the solution to Problem I, as expected.
 \fi
-
-\newpage
-
-\section{Problem III - Superposition}
-
-In the previous examples, only one charge was responsible for creating the electric field $\bfvec{E}$. When there are more charges, superposition can be used to find the total electric field by summing $\bfvec{E}$ due to each charge.
-
-Charge $q_1 = +q$ is at $(x, y) = (a, 0)$, charge $q_2 = +q$ is at $(x, y) = (-a, 0)$, and charge $q_3 = -q$ is at $(x, y) = (0, a)$. Assume that $q$ is a positive number.
-
-\begin{enumerate}
-
-  \item Draw this charge configuration below.
-
-\end{enumerate}
-
-\ifsolutions
-
-\input{figures/Superposition.tikz}
-\else
-
-\input{../Electric_Force/figures/grid.tikz}
-\fi
-\ifsolutions\else
-\input{../Electric_Force/figures/grid.tikz}
-\fi
-
-\begin{enumerate}
-
-  \item[2.] Why does it not make sense to ask what the electric \emph{force} is at the origin?
-
-\end{enumerate}
-
-\ifsolutions
-There is no charge at the origin. (The electric field can be used to find the force on a charge \emph{if} it was placed at the origin.)
-\else
-
-\vskip 24pt
-\fi
-\ifsolutions\else
-\vskip 24pt
-\fi
-
-In the following, 
-
-\begin{enumerate}
-
-  \item[3.] Find the electric field at the origin due to $q_1$. Write your answer in the form $\bfvec{E}_1=E_{x1}\ihat + E_{y1}\jhat$.
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}_1=-\frac{kq}{a^2}\ihat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[4.] Find the electric field at the origin due to $q_2$. Write your answer in the form $\bfvec{E}_2=E_{x2}\ihat + E_{y2}\jhat$.
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}_2=+\frac{kq}{a^2}\ihat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[5.] Find the electric field at the origin due to $q_3$. Write your answer in the form $\bfvec{E}_3=E_{x3}\ihat + E_{y3}\jhat$.
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}_3=+\frac{kq}{a^2}\jhat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[6.] Find the total electric field at the origin by adding $\bfvec{E}_1$, $\bfvec{E}_2$, and $\bfvec{E}_3$. Write your answer in the form $\bfvec{E}=E_{x}\ihat + E_{y}\jhat$.
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}=+\frac{kq}{a^2}\jhat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[7.] Will your answers to 3.--6. change if the problem had asked for the electric field at a different position? If so, which answers?
-
-            \ifsolutions
-            Yes, all answers. The electric field at a given location due to each charge depends on the distance to the location. If the location changes, the distance changes.
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[8.] Find the electric field at the origin if charge $q_1=2q$ (instead of $q$).
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}=-\frac{kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-  \item[9.] Find the electric field at the origin if charge $q_1=-2q$ (instead of $q$).
-
-            \ifsolutions
-            {\bf Answer}: $\ds\bfvec{E}=+\frac{3kq}{a^2}\ihat+\frac{kq}{a^2}\jhat$
-            \else
-
-            \vskip 72pt
-            \fi
-            \ifsolutions\else
-            \vskip 72pt
-            \fi
-
-\end{enumerate}
 
 \end{document}
