rhat.md updated by BiEdit

--- a/rhat/rhat.tex
+++ b/rhat/rhat.tex
@@ -83,41 +83,41 @@
 \section{The $\rhat$ Unit Vector}
 
 One approach to finding the electric force between two charges is to use
-$F=k{|q$1q$2|}/{r^2}$ to find the magnitude and a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F$x\ihat + F$y\jhat$.
+$F=k{|q_1q_2|}/{r^2}$ to find the magnitude and a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
 An alternative, and more direct, approach is to use an equation for electric force using a unit vector $\rhat$:
 
-$$\bfvec{F}${q$1\text{ on }q$2}=kq$1q$2\frac{\rhat}{r^2}$$
+$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat}{r^2}$$
 
-where $\rhat$ is the unit vector that points from the position of $q$1$ to the position of $q$2$, and $r$ is the distance between $q$1$ and $q$2$.
+where $\rhat$ is the unit vector that points from the position of $q_1$ to the position of $q_2$, and $r$ is the distance between $q_1$ and $q_2$.
 
 To find $\rhat$, 
 
 \begin{enumerate}
 
-  \item draw a vector, $\bfvec{r}$, from $q$1$ to $q$2$;
+  \item draw a vector, $\bfvec{r}$, from $q_1$ to $q_2$;
 
-  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r$x\ihat+r$y\jhat$; then
+  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
 
-  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r$x^2+r$y^2}$.
+  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
 \end{enumerate}
 
 Similarly, the equation for electric field using a unit vector $\rhat$ is
 
-$$\bfvec{E}${\text{due to }q}=kq\frac{\rhat}{r^2}$$
+$$\bfvec{E}_{\text{due to }q}=kq\frac{\rhat}{r^2}$$
 
-where $\rhat$ is the unit vector that points from the position of $q$1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q$1$ and that point. 
+where $\rhat$ is the unit vector that points from the position of $q_1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q_1$ and that point. 
 
 To find $\rhat$, 
 
 \begin{enumerate}
 
-  \item draw a vector, $\bfvec{r}$ from $q$1$ to the point in space where you want to know $\bfvec{E}$;
+  \item draw a vector, $\bfvec{r}$ from $q_1$ to the point in space where you want to know $\bfvec{E}$;
 
-  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r$x\ihat+r$y\jhat$; then
+  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
 
-  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r$x^2+r$y^2}$.
+  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
 \end{enumerate}
 
@@ -125,15 +125,15 @@ Note that in the equations for $\bfvec{F}$ and $\bfvec{E}$, we do not need to ta
 
 \section{Example I}
 
-Charge $q$1$ is at $(x,y)=(-a,-a)$ and charge $q$2$ is at $(a, a)$. Find
+Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Find
 
 \begin{enumerate}
 
   \item $\rhat$
 
-  \item $\bfvec{F}${q$1\text{ on }q$2}$
+  \item $\bfvec{F}_{q_1\text{ on }q_2}$
 
-  \item $F${q$1\text{ on }q$2}$
+  \item $F_{q_1\text{ on }q_2}$
 
 \end{enumerate}
 
@@ -145,35 +145,35 @@ The calculation of $\rhat$ is shown in the following diagram.
 
 Substitution gives
 
-$$\bfvec{F}${q$1\text{ on }q$2}=kq$1q$2\frac{\rhat}{r^2} = \frac{kq$1q$2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1q$2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat}{r^2} = \frac{kq_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1q_2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
 
-Check: if $q$1$ and $q$2$ are both positive, the force on $q$2$ is upwards and to the right, as expected.
+Check: if $q_1$ and $q_2$ are both positive, the force on $q_2$ is upwards and to the right, as expected.
 
 \section{Problem I}
 
-Charge $q$1$ is at $(x,y)=(-a,a)$ and charge $q$2$ is at $(a, 0)$. Find
+Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Find
 
 \begin{enumerate}
 
   \item $\rhat$
 
-  \item $\bfvec{F}${q$1\text{ on }q$2}$
+  \item $\bfvec{F}_{q_1\text{ on }q_2}$
 
-  \item $F${q$1\text{ on }q$2}$
+  \item $F_{q_1\text{ on }q_2}$
 
 \end{enumerate}
 
 \section{Example II}
 
-If $q$1$ is at $(x,y)=(-a,-a)$, find 
+If $q_1$ is at $(x,y)=(-a,-a)$, find 
 
 \begin{enumerate}
 
   \item $\rhat$
 
-  \item $\bfvec{E}${\text{at }(a,a)\text{ due to }q$1}$
+  \item $\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}$
 
-  \item $E${\text{at }(a,a)\text{ due to }q$1}$
+  \item $E_{\text{at }(a,a)\text{ due to }q_1}$
 
 \end{enumerate}
 
@@ -181,39 +181,39 @@ If $q$1$ is at $(x,y)=(-a,-a)$, find
 
 The calculation of $\rhat$ is shown in the following diagram.
 
-\input{figures/Two_Charges.tikz?1691615317836}
+\input{figures/Two_Charges.tikz}
 
 Substitution gives
 
-$$\bfvec{E}${\text{at }(a,a)\text{ due to }q$1}=kq$1\frac{\rhat}{r^2} = kq$1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq$1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+$$\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}=kq_1\frac{\rhat}{r^2} = kq_1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
 
 Check: If a positive charge was placed at $(x,y)=(a,a)$, it would tend to move up and to the right, which is consitent with the signs on the components of the electric field found above.
 
 To calculate $|\bfvec{E}|$, we can use
 
-$$|\bfvec{E}|=E=\sqrt{E$x^2+E$y^2}$$
+$$|\bfvec{E}|=E=\sqrt{E_x^2+E_y^2}$$
 
-and plug in $E$x=k\frac{q$1}{8a^2}\frac{1}{\sqrt{2}}$ and $E$y=k\frac{q$1}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $E=k|q$1|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
+and plug in $E_x=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and $E_y=k\frac{q_1}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $E=k|q_1|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
 
-$\ds\bfvec{E}=kq$1\frac{\rhat}{r^2}\quad$
+$\ds\bfvec{E}=kq_1\frac{\rhat}{r^2}\quad$
 gives
-$\quad\ds|\bfvec{E}|=k|q$1|\frac{|\rhat|}{r^2}$.
+$\quad\ds|\bfvec{E}|=k|q_1|\frac{|\rhat|}{r^2}$.
 
 The magnitude of a unit vector is $1$, so
 
-$\ds|\bfvec{E}|=k|q$1|\frac{1}{r^2}=\frac{k|q$1|}{8a^2}$.
+$\ds|\bfvec{E}|=k|q_1|\frac{1}{r^2}=\frac{k|q_1|}{8a^2}$.
 
 \section{Problem II}
 
-If $q$1$ is at $(x,y)=(-a,a)$, find 
+If $q_1$ is at $(x,y)=(-a,a)$, find 
 
 \begin{enumerate}
 
   \item $\rhat$
 
-  \item $\bfvec{E}${\text{at }(a,0)\text{ due to }q$1}$
+  \item $\bfvec{E}_{\text{at }(a,0)\text{ due to }q_1}$
 
-  \item $E${\text{at }(a,0)\text{ due to }q$1}$
+  \item $E_{\text{at }(a,0)\text{ due to }q_1}$
 
 \end{enumerate}
 
@@ -227,7 +227,7 @@ $\quad$ $r=\sqrt{5}a$
 $\quad$
 $\ds\rhat=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$,
 
-$\ds\bfvec{E}${\text{at }(a,0) \text{ due to }q$1}=\frac{kq$1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$.
+$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$.
 \fi
 
 \end{document}
