rhat and vectors

--- a/rhat/rhat.tex
+++ b/rhat/rhat.tex
@@ -71,7 +71,7 @@
 
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{The r^ Unit Vector}
+\lhead{The $\rhat$ Unit Vector}
 \rhead{\thepage}
 \fancyfoot{}
 
@@ -83,39 +83,39 @@
 \section{The $\rhat$ Unit Vector}
 
 One approach to finding the electric force between two charges is to use
-$F=k{|q_1q_2|}/{r^2}$ to find the magnitude and a diagram to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
+$F=k{|q_1q_2|}/{r^2}$ to find the magnitude and a diagram and trigonometry to write $\bfvec{F}$ in the form $\bfvec{F}=F_x\ihat + F_y\jhat$.
 
-An alternative, and more direct, approach is to use an equation for electric force using a unit vector $\rhat$:
+An alternative approach is to use an equation for electric force using a unit vector $\rhat$:
 
-$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat}{r^2}$$
+$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2}$$
 
-where $\rhat$ is the unit vector that points from the position of $q_1$ to the position of $q_2$, and $r$ is the distance between $q_1$ and $q_2$.
+where $\rhat_{12}$ is the unit vector that points from the position of $q_1$ to the position of $q_2$, and $r$ is the distance between $q_1$ and $q_2$.
 
-To find $\rhat$, 
+To find $\rhat_{12}$,
 
 \begin{enumerate}
 
-  \item draw a vector, $\bfvec{r}$, from $q_1$ to $q_2$;
+  \item draw a vector, $\bfvec{r}_{12}$, from $q_1$ to $q_2$;
 
-  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
+  \item Write $\bfvec{r}_{12}$ in the form $\bfvec{r}_{12}=r_x\ihat+r_y\jhat$ using the diagram; then
 
-  \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
+  \item $\rhat_{12}=\bfvec{r}_{12}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
 \end{enumerate}
 
-Similarly, the equation for electric field using a unit vector $\rhat$ is
+The equation for electric field using a unit vector $\rhat$ is
 
 $$\bfvec{E}_{\text{due to }q}=kq\frac{\rhat}{r^2}$$
 
-where $\rhat$ is the unit vector that points from the position of $q_1$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q_1$ and that point. 
+where $\rhat$ is the unit vector that points from the position of $q$ to the point in space where we want to know $\bfvec{E}$, and $r$ is the distance between $q$ and that point. 
 
 To find $\rhat$, 
 
 \begin{enumerate}
 
-  \item draw a vector, $\bfvec{r}$ from $q_1$ to the point in space where you want to know $\bfvec{E}$;
+  \item draw a vector, $\bfvec{r}$,from $q$ to the point in space where you want to know $\bfvec{E}$;
 
-  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$; then
+  \item Write $\bfvec{r}$ in the form $\bfvec{r}=r_x\ihat+r_y\jhat$ using the diagram; then
 
   \item $\rhat=\bfvec{r}/r$, where $r=\sqrt{r_x^2+r_y^2}$.
 
@@ -123,13 +123,15 @@ To find $\rhat$,
 
 Note that in the equations for $\bfvec{F}$ and $\bfvec{E}$, we do not need to take the absolute value of the charges.
 
+\newpage
+
 \section{Example I}
 
 Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Find
 
 \begin{enumerate}
 
-  \item $\rhat$
+  \item $\rhat_{12}$
 
   \item $\bfvec{F}_{q_1\text{ on }q_2}$
 
@@ -139,15 +141,28 @@ Charge $q_1$ is at $(x,y)=(-a,-a)$ and charge $q_2$ is at $(a, a)$. Find
 
 \textbf{Solution}
 
-The calculation of $\rhat$ is shown in the following diagram.
-
 \input{figures/Two_Charges.tikz}
 
-Substitution gives
+$\bfvec{r}_{12}=r\cos(45^\circ)\ihat + r\sin(45^\circ)\jhat$, $\ds\rhat_{12}=\frac{\bfvec{r}}{r}=\cos(45^\circ)\ihat +\sin(45^\circ)\jhat$
 
-$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat}{r^2} = \frac{kq_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1q_2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+Note that the magnitude of $\rhat_{12}=1$: $|\rhat_{12}|=\sqrt{\cos^2(45^\circ)+\sin^2(45^\circ)}=1$
 
-Check: if $q_1$ and $q_2$ are both positive, the force on $q_2$ is upwards and to the right, as expected.
+The sides of the right triangle have length $2a$, so the hypotenuse $r=\sqrt{8}a$. Substitution gives
+
+$$\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2} = \frac{kq_1q_2}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1q_2}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+
+Check: if $q_1$ and $q_2$ are both positive or both negative, the force on $q_2$ is upwards and to the right, as expected.
+
+To calculate $|\bfvec{F}|$, we can use $|\bfvec{F}|=F=\sqrt{F_x^2+F_y^2}$ and plug in $F_x=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and $E_y=k\frac{q_1q_2}{8a^2}\frac{1}{\sqrt{2}}$ and use $\sqrt{c^2}=|c|$ (where $c$ is a real number) to show that $F=k|q_1q_2|/{8a^2}$. There is an easier way. Taking the magnitude of both sides of
+
+$\ds\bfvec{F}=kq_2q_1\frac{\rhat}{r^2}\quad$
+gives
+$\quad\ds|\bfvec{F}|=F=k|q_1q_2|\frac{|\rhat|}{r^2}$.
+
+The magnitude of a unit vector is $1$, so
+$\ds F=k|q_1q_2|\frac{1}{r^2}=k|q_1q_2|\frac{1}{8a^2}$.
+
+\newpage
 
 \section{Problem I}
 
@@ -155,7 +170,7 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Find
 
 \begin{enumerate}
 
-  \item $\rhat$
+  \item $\rhat_{12}$
 
   \item $\bfvec{F}_{q_1\text{ on }q_2}$
 
@@ -163,9 +178,28 @@ Charge $q_1$ is at $(x,y)=(-a,a)$ and charge $q_2$ is at $(a, 0)$. Find
 
 \end{enumerate}
 
+\ifsolutions
+\textbf{Solution}
+
+$r = \sqrt{5}a$
+
+$\bfvec{r}_{12}=2a\ihat-a\jhat$
+
+$\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
+
+$\ds\bfvec{F}_{q_1\text{ on }q_2}=kq_1q_2\frac{\rhat_{12}}{r^2}=\frac{kq_1q_2}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+
+$\ds F_{q_1\text{ on }q_2} = k|q_1q_2|\frac{1}{r^2}= k|q_1q_2|\frac{1}{5a^2}$
+\else
+
+\input{../Electric_Force/figures/grid.tikz}
+\fi
+
+\newpage
+
 \section{Example II}
 
-If $q_1$ is at $(x,y)=(-a,-a)$, find 
+If $q_1$ is at $(x,y)=(-a,-a)$, find
 
 \begin{enumerate}
 
@@ -179,13 +213,13 @@ If $q_1$ is at $(x,y)=(-a,-a)$, find
 
 \textbf{Solution}
 
-The calculation of $\rhat$ is shown in the following diagram.
-
-\input{figures/Two_Charges.tikz}
+The calculation of $\rhat$ is the same as that shown in the diagram Example I (except we do not need subscripts for the $\bfvec{E}$ formula).
 
 Substitution gives
 
 $$\bfvec{E}_{\text{at }(a,a)\text{ due to }q_1}=kq_1\frac{\rhat}{r^2} = kq_1\frac{1}{8a^2}(\cos 45^\circ \ihat + \sin 45^\circ \jhat) =\frac{kq_1}{8a^2}\left[\frac{1}{\sqrt{2}}\ihat + \frac{1}{\sqrt{2}}\jhat\right]$$
+
+(Notice the relationship between the answers to this problem and the answers to Example I.)
 
 Check: If a positive charge was placed at $(x,y)=(a,a)$, it would tend to move up and to the right, which is consitent with the signs on the components of the electric field found above.
 
@@ -203,6 +237,8 @@ The magnitude of a unit vector is $1$, so
 
 $\ds|\bfvec{E}|=k|q_1|\frac{1}{r^2}=\frac{k|q_1|}{8a^2}$.
 
+\newpage
+
 \section{Problem II}
 
 If $q_1$ is at $(x,y)=(-a,a)$, find 
@@ -217,17 +253,69 @@ If $q_1$ is at $(x,y)=(-a,a)$, find
 
 \end{enumerate}
 
-\input{../Electric_Force/figures/grid.tikz}
-
 \ifsolutions
-{\bf Answer}:
+{\bf Solution}:
 
-$\bfvec{r}=2a\ihat-a\jhat$,
-$\quad$ $r=\sqrt{5}a$
-$\quad$
-$\ds\rhat=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$,
+(Notice the relationship between the answers to this problem and the answers to Problem I.)
 
-$\ds\bfvec{E}_{\text{at }(a,0) \text{ due to }q_1}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat -\frac{2}{\sqrt{5}}\jhat\right)$.
+$r = \sqrt{5}a$
+
+$\bfvec{r}_{12}=2a\ihat-a\jhat$
+
+$\rhat_{12}=\bfvec{r}_{12}/r=\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat$
+
+$\ds\bfvec{E}=kq_1\frac{\rhat}{r^2}=\frac{kq_1}{5a^2}\left(\frac{2}{\sqrt{5}}\ihat-\frac{1}{\sqrt{5}}\jhat\right)$
+
+$\ds E = k|q_1|\frac{1}{r^2}= k|q_1|\frac{1}{5a^2}$
+\else
+
+\input{../Electric_Force/figures/grid.tikz}
 \fi
+
+\newpage
+
+\section{Additional Problems}
+
+\subsection{Computing $\rhat$ for $\bfvec{F}$ formula}
+
+If $q_1$ is at $(x,y)=(-a,2a)$ and $q_2$ is at $(x,y)=(a,0)$, find
+
+\begin{enumerate}
+
+  \item $\rhat_{12}$
+
+  \item $\rhat_{21}$
+
+  \item $r$
+
+\end{enumerate}
+
+\subsection{Computing $\rhat$ for $\bfvec{E}$ formula}
+
+If $q_1$ is at $(x,y)=(a,0)$ and the point where we want to compute $\bfvec{E}$ is at $(x,y)=(-a,2a)$, find
+
+\begin{enumerate}
+
+  \item $\rhat$
+
+  \item $\rhat$
+
+  \item $r$
+
+\end{enumerate}
+
+\subsection{Problem I Follow-up}
+
+For the charge configuration given in Problem I, find
+
+\begin{enumerate}
+
+  \item $\rhat_{21}$
+
+  \item $\bfvec{F}_{q_2\text{ on }q_1}$
+
+  \item $F_{q_2\text{ on }q_1}$
+
+\end{enumerate}
 
 \end{document}
